Reduce clutter on the shift wall calendar. Show shifts as compared with an ideal schedule for their rotation. Ideal schedule is kept as tasks in week of 1990-01-01 (sorry).  Fixes #155

--- a/mess/media/css/base.css
+++ b/mess/media/css/base.css
@@ -699,6 +699,7 @@ div.rotation { page-break-inside:avoid; margin-bottom:12pt; }
     vertical-align:top; font-size:10pt; }
 .rotation-shift { min-height:62pt; border-bottom:1pt solid black; padding:5pt; }
 .rotation-shift hr { border:0pt; margin:3pt; }
+th.rotation-ideal { font-size:12pt; line-height:12pt; padding-bottom:20pt; }
 
 /* the problem is that table.data td table td { should've never been set */
 #double-column #primary-content-wrapper table.cycletasks td { margin:0px; padding:0px; border:0px; }
